[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/ShieldHulkBar/ShieldHullBar.gd" type="Script" id=1]
[ext_resource path="res://Assets/shield_bar_progress_2.svg" type="Texture" id=2]
[ext_resource path="res://Assets/hull_bar_under.svg" type="Texture" id=3]
[ext_resource path="res://Assets/hull_bar_progress.svg" type="Texture" id=5]

[node name="ShieldHullBar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -188.9
margin_top = 76.6236
margin_right = -188.9
margin_bottom = 76.6237
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShieldBar" type="TextureProgress" parent="."]
margin_right = 225.0
margin_bottom = 70.0
value = 5.0
texture_progress = ExtResource( 2 )
tint_progress = Color( 0.121569, 0.756863, 0.788235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShieldTween" type="Tween" parent="ShieldBar"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="ShieldBar"]

[node name="HullBar" type="TextureProgress" parent="."]
margin_left = 10.0
margin_top = 13.0
margin_right = 214.0
margin_bottom = 58.0
value = 5.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 5 )
tint_progress = Color( 0.678431, 0.866667, 0.262745, 1 )
stretch_margin_left = 37
stretch_margin_top = 10
stretch_margin_right = 46
stretch_margin_bottom = 23
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HullTween" type="Tween" parent="HullBar"]

[node name="ShieldText" type="RichTextLabel" parent="."]
margin_top = 384.0
margin_right = 40.0
margin_bottom = 424.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HullText" type="RichTextLabel" parent="."]
margin_top = 464.0
margin_right = 40.0
margin_bottom = 504.0
